[project]
name = "hwi-work"
version = "0.1.0"
description = ""
authors = [
    {name = "daiyabarus",email = "daiyabarus@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "streamlit-antd-components (>=0.3.2,<0.4.0)",
    "streamlit-extras (>=0.5.0,<0.6.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pyright (>=1.1.392.post0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
